[gd_scene load_steps=8 format=3 uid="uid://dxlchd6ow5uww"]

[ext_resource type="Script" path="res://PlayButton.gd" id="1_1fnim"]
[ext_resource type="Texture2D" uid="uid://bebegmjvw40cy" path="res://Assets/1726157983131.jpg" id="2_bmrgw"]
[ext_resource type="FontFile" uid="uid://cug67l2gwtw6a" path="res://Assets/LuckiestGuy-Regular.ttf" id="3_0hxhl"]
[ext_resource type="AudioStream" uid="uid://c5a0yv5kmul22" path="res://Audio/NumberSound.mp3" id="4_ruteg"]
[ext_resource type="PackedScene" uid="uid://dfvp3u5cchq7r" path="res://AdventureMode/MenuButtons/adventure_completed.tscn" id="5_cmwsw"]

[sub_resource type="LabelSettings" id="LabelSettings_6x3eq"]
font = ExtResource("3_0hxhl")
font_size = 71
outline_size = 25
outline_color = Color(0.02, 0.02, 0.02, 1)

[sub_resource type="LabelSettings" id="LabelSettings_56cf3"]
font = ExtResource("3_0hxhl")
font_size = 32
outline_size = 21
outline_color = Color(1, 0, 0, 1)

[node name="PlayButton" type="Node2D"]
script = ExtResource("1_1fnim")

[node name="Button" type="Button" parent="."]
offset_left = -412.0
offset_top = -123.0
offset_right = 413.0
offset_bottom = 126.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(0.33875, 0.245467)
texture = ExtResource("2_bmrgw")

[node name="Label" type="Label" parent="."]
offset_left = -408.0
offset_top = -114.0
offset_right = 411.0
offset_bottom = 67.0
text = "ADVENTURE COMPLETED"
label_settings = SubResource("LabelSettings_6x3eq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNumber" type="Label" parent="."]
offset_left = -141.0
offset_top = 26.0
offset_right = 139.0
offset_bottom = 59.0
text = "Level 1"
label_settings = SubResource("LabelSettings_56cf3")
horizontal_alignment = 1

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ruteg")
volume_db = 11.763
pitch_scale = 4.0

[node name="AdventureCompleted" parent="." instance=ExtResource("5_cmwsw")]
visible = false
position = Vector2(-350, -306)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
